# AgentMemory

./: .gitignore  README.md  pyproject.toml
examples/: basic_usage.py
src/agent_memory/: __init__.py  agent.py
src/agent_memory/backends/: __init__.py  memory_backend.py
src/agent_memory/config/: __init__.py  settings.py
src/agent_memory/consolidation/: __init__.py
src/agent_memory/core/: __init__.py  exceptions.py  memory.py  protocols.py  types.py
src/agent_memory/embeddings/: __init__.py  base.py  openai_embeddings.py
src/agent_memory/files/: __init__.py  loader.py  types.py
src/agent_memory/files/extractors/: __init__.py  base.py  pdf.py  text.py
src/agent_memory/lifecycle/: __init__.py
src/agent_memory/memories/: __init__.py  base.py  conversation.py  episodic.py  file.py  long_term.py  procedural.py  semantic.py  short_term.py
src/agent_memory/scoring/: __init__.py  decay.py  importance.py
src/agent_memory/sync/: __init__.py  wrappers.py
tests/: __init__.py  conftest.py
tests/test_files/: __init__.py  test_chunking.py  test_loader.py
tests/test_files/fixtures/: sample.md  sample.py  sample.txt
tests/test_memories/: __init__.py  test_file_memory.py
