[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agent-memory"
version = "0.1.0"
description = "A developer-friendly Python API framework for AI agent memory with pluggable storage backends"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Agent Memory Contributors" }
]
keywords = ["ai", "agent", "memory", "llm", "embeddings", "vector-search"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
redis = ["redis>=5.0"]
postgres = ["asyncpg>=0.29", "pgvector>=0.2"]
chroma = ["chromadb>=0.4"]
pinecone = ["pinecone-client>=3.0"]
openai = ["openai>=1.0"]
pdf = ["pymupdf>=1.23"]
files = ["agent-memory[pdf]"]
all = ["agent-memory[redis,postgres,chroma,pinecone,openai,pdf]"]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
    "mypy>=1.8",
    "ruff>=0.2",
]

[project.urls]
Homepage = "https://github.com/agent-memory/agent-memory"
Documentation = "https://agent-memory.readthedocs.io"
Repository = "https://github.com/agent-memory/agent-memory"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_memory"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]
